--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<h2>My Playlist</h2>
+	<div class="player_one">
+		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA"><h5>song 1</h5></a>
+		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY"><h5>song 2</h5></a>
+		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"><h5>song 3</h5></a>
+		<a href="https://www.youtube.com/watch?v=puKD4nkB1h4"><h5>song 4</h5></a>
+		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"><h5>song 5</h5></a>
+	 
+	</div>
+      
+        <h4>Now Playing...</h4>
+	
+	<div class="player_two">
+		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+	    <h4>MP3 songs</h4>
+		<h6>Maan Meri Jaan</h6>
+		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls width=""></audio>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
