--- a/main.html
+++ b/main.html
@@ -7,14 +7,15 @@
 </head>
 
 <body>
-	<h2>My Playlist</h2>
+	<h1>My Playlist</h1>
 	<div class="player_one">
-		<a href="https://www.youtube.com/watch?v=kd-6aw99DpA"><h5>song 1</h5></a>
-		<a href="https://www.youtube.com/watch?v=9iIX4PBplAY"><h5>song 2</h5></a>
-		<a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"><h5>song 3</h5></a>
-		<a href="https://www.youtube.com/watch?v=puKD4nkB1h4"><h5>song 4</h5></a>
-		<a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"><h5>song 5</h5></a>
-	 
+		<ul>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA"><h2>song 1</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY"><h2>song 2</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"><h2>song 3</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD4nkB1h4"><h2>song 4</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"><h2>song 5</h2></a></li>
+	    </ul>
 	</div>
       
         <h4>Now Playing...</h4>
