--- a/main.html
+++ b/main.html
@@ -21,10 +21,12 @@
         <h4>Now Playing...</h4>
 	
 	<div class="player_two">
-		<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+		<video controls>
+		<source src="https://www.w3schools.com/tags/movie.mp4"></video>
 	    <h4>MP3 songs</h4>
 		<h6>Maan Meri Jaan</h6>
-		<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls width=""></audio>
+		<audio controls>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" width=""></audio>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
