--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<h1>My Playlist</h1>
 	<div class="player_one">
 		<ul>
-		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA"><h2>song 1</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY"><h2>song 2</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y"><h2>song 3</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=puKD4nkB1h4"><h2>song 4</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k"><h2>song 5</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank"><h2>song 1</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank"><h2>song 2</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank"><h2>song 3</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD4nkB1h4" target="_blank"><h2>song 4</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank"><h2>song 5</h2></a></li>
 	    </ul>
 	</div>
       
@@ -22,11 +22,11 @@
 	
 	<div class="player_two">
 		<video controls>
-		<source src="https://www.w3schools.com/tags/movie.mp4"></video>
+		<source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4"></video>
 	    <h4>MP3 songs</h4>
 		<h6>Maan Meri Jaan</h6>
 		<audio controls>
-		<source src="https://www.pagalworld.com.se/files/download/id/64630" width=""></audio>
+		<source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mp3" width=""></audio>
 	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
