--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	<h1>My Playlist</h1>
 	<div class="player_one">
 		<ul>
-		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank"><h2>NOW Playing...</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank"><h2>song 2</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank"><h2>song 3</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=puKD4nkB1h4" target="_blank"><h2>song 4</h2></a></li>
-		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank"><h2>song 5</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank"><h2>Song 1</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank"><h2>Song 2</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank"><h2>Song 3</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=puKD4nkB1h4" target="_blank"><h2>Song 4</h2></a></li>
+		<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank"><h2>Song 5</h2></a></li>
 	    </ul>
 	</div>
       
